<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">云Pos移动版</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set">商户设置</string>
    <string name="title_activity_about">关于易之星</string>
    <string name="title_activity_editcard">设置</string>
    <string name="title_activity_fk">帮助反馈</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_share_sina">分享到新浪微博</string>
    <string name="common_search_noresult">木有结果，再找找看</string>
    <string name="common_filter_noresult">木有结果，换个条件再试试</string>
    <string name="common_no_network_msg">网络不给力，再试试</string>
    <string name="common_server_error_msg">服务器偷懒了，先去其他页面逛逛吧</string>
    <string name="title_activity_register_second">注册2/3</string>
    <string name="title_activity_register_three">注册3/3</string>
    <string name="title_activity_profile">商户资料</string>
    <string name="title_activity_member_profile">个人信息</string>
    <string name="title_activity_member_profile_nickname">修改姓名</string>
    <string name="title_activity_member_profile_mobile">修改手机号</string>
    <string name="title_activity_member_profile_tel">修改固定电话</string>
    <string name="title_activity_member_profile_address">修改地址</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_order_delivery">快递发货</string>
    <string name="title_activity_order_delivery_corp">选择物流公司</string>
    <string name="title_activity_order_delivery_code">快递单号</string>
    <string name="title_activity_print">打印设置</string>
    <string name="title_activity_notice">店铺公告</string>
    <string name="title_activity_profile_entry">输入登录密码</string>
    <string name="title_activity_my_scan_code">收款页面</string>
    <string name="title_activity_my_pay_code">我的二维码</string>
    <string name="title_activity_statistics">营业统计</string>
    <string name="title_activity_paysuccess">收款成功</string>
    <string name="title_activity_OrderSearch">订单查询</string>
    <string name="title_activity_todayAllOrder">今日营业额</string>
    <string name="title_activity_yesterdayAllOrder">昨日营业额</string>
    <string name="title_activity_thismonthAllOrder">本月营业额</string>
    <string name="title_activity_mainstore">店铺管理</string>
    <string name="title_activity_getmoney">提现</string>
    <string name="title_activity_getmoneyexplain">提现规则</string>
    <string name="title_activity_mainbranchselect">营业统计</string>
    <string name="goods_salesstatistics">商品销售统计</string>
    <string name="title_activity_H5GoodsPreviewActivity">商品预览</string>
    <string name="title_activity_WholeSaleOrdersActivity">易之星商城</string>
    <string name="title_activity_NearlyShopperGoodsActivity">选择商品</string>
    <string name="title_activity_MoreShoppingSortActivity">更多</string>
    <string name="title_activity_ShoppingCartOrderSureActivity">订单确定</string>
    <string name="title_activity_SelectAdressActivity">选择收货地址</string>
    <string name="title_activity_AddAdressActivity">新增收货地址</string>
    <string name="title_activity_ShoppingCartOrderSureListActivity">商品清单</string>
    <string name="title_activity_PaySureActivity">支付确定</string>
    <string name="title_activity_goodsmanagement">商品管理</string>
    <string name="title_activity_goodsadd">无码商品添加</string>
    <string name="title_activity_cashcharge">现金记账</string>
    <string name="title_activity_cashchargenotes">备注</string>
    <string name="title_activity_getopenorder">取单</string>
    <string name="title_activity_submitorder">提交订单</string>
    <string name="title_activity_printset">小票打印设置</string>
    <string name="title_activity_putreport">数据导出</string>
    <string name="title_activity_openorderpaycode">扫一扫</string>
    <string name="tv_yxservice">易星服务</string>
    <string name="tv_goods_management">商品管理</string>
    <string name="btn_sort">分类管理</string>
    <string name="btn_alleditor">批量下架</string>
    <string name="btn_addgood">新增商品</string>
    <string name="tv_allgoods">全部商品</string>
    <string name="tv_editor">编辑</string>
    <string name="btn_addsort">新增分类</string>
    <string name="tv_stock_warning">库存预警</string>
    <string name="tv_stock_warning_num">库存预警量</string>
    <string name="tv_good_stock">商品库存</string>
    <string name="tv_less_goods">缺货产品</string>
    <string name="tv_down_goods">已下架的商品</string>
    <string name="tv_goodsname">商品名称</string>
    <string name="tv_goodsprice">商品售价</string>
    <string name="tv_goodscode">生成条码</string>
    <string name="tv_goodcostscode">成本价</string>
    <string name="tv_market_value">市场价</string>
    <string name="tv_goodgrossscode">毛利</string>
    <string name="tv_goodtype">分类</string>
    <string name="tv_upframe">上架</string>
    <string name="tv_remark">备注</string>
    <string name="tv_goodpicture">商品图片</string>
    <string name="tv_save">保存</string>
    <string name="tv_cell">删除</string>
    <string name="Quantity_increase">数量增幅</string>
    <string name="Starting_quantity">最小起订量</string>
    <string name="Table_number">桌号点餐</string>
    <string name="describe">描述</string>
    <string-array name="sex_list">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="env_list">
        <item>线上环境</item>
        <item>测试环境</item>
    </string-array>
    <string name="title_activity_profile_email">修改邮箱</string>
    <string name="title_activity_profile_email_code">修改邮箱2/2</string>
    <string name="title_activity_profile_password">修改密码</string>
    <string name="title_activity_profile_bind">合作账号管理</string>
    <string name="title_activity_profile_mobile">修改手机号1/2</string>
    <string name="title_activity_profile_mobile_code">修改手机号2/2</string>
    <string name="crop__saving">正在保存照片…</string>
    <string name="crop__wait">请等待…</string>
    <string name="crop__pick_error">无效的图片</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="title_activity_forget_password">重置密码1/2</string>
    <string name="title_activity_forget_password_second">重置密码2/2</string>
    <string name="title_activity_address">发货地址</string>
    <string name="title_activity_address_add">新增收货地址</string>
    <string name="title_activity_address_detail">收货地址</string>
    <string name="title_activity_bind">绑定手机号</string>
    <string name="title_activity_pay">收银台</string>
    <string name="title_activity_address_location">选择地址</string>
    <string name="title_activity_news_detail">精选详情</string>
    <string name="title_activity_video_detail">视频详情</string>
    <string name="title_activity_search">查询结果</string>
    <string name="title_activity_msg">消息列表</string>
    <string name="title_activity_money">充值/提现</string>
    <string name="title_activity_money_log">历史记录</string>
    <string name="title_activity_report">收入统计</string>
    <string name="radio_btn_normal_explain1">周一到周四第二天下午17点前到账，</string>
    <string name="radio_btn_normal_explain2">周五到周日在下星期一17点前到账</string>
    <string name="radio_btn_fast_explain">2小时内到账；工作日：9:00 - 16:30</string>
    <string-array name="size_item">
        <item>中等</item>
        <item>大</item>
        <item>很大</item>
        <item>最大</item>
    </string-array>
    <string name="title_activity_fav">我的收藏</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="webview_refresh">刷新</string>
    <string name="webview_share">分享</string>
    <string name="webview_copy_link">复制链接</string>
    <string name="webview_open">用浏览器打开</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="language_set">语言设置</string>
    <string name="order_list">订单列表</string>
    <string name="store_management">店铺管理</string>
    <string name="business_statistics">营业统计</string>
    <string name="merchant_center">商户中心</string>
    <string name="withdrawable_balance">可提现余额</string>
    <string name="merchant_info">商户资料</string>
    <string name="distribution_set">配送设置</string>
    <string name="message_center">消息中心</string>
    <string name="merchant_set">商户设置</string>
    <string name="print_set">打印设置</string>
    <string name="change_password">修改密码</string>
    <string name="modify_bank_card">修改银行卡</string>
    <string name="set">设置</string>
    <string name="sign_out">退出</string>
    <string name="system_upgrade">系统升级</string>
    <string name="contact_service">联系客服</string>
    <string name="are_you_sure_sign_out">确定退出登录？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="signed_out">已退出登录</string>
    <string name="new_version_found">发现有新版本 V</string>
    <string name="no_order_record">还没有订单记录哦</string>
    <string name="code_scanning_collection">扫码收款</string>
    <string name="collection_code">收款码</string>
    <string name="cash_bookkeeping">现金记账</string>
    <string name="billing">开单</string>
    <string name="today">今天</string>
    <string name="count">笔</string>
    <string name="all">共</string>
    <string name="balance_payment">余额支付</string>
    <string name="wechat_payment">微信支付</string>
    <string name="alipay">支付宝</string>
    <string name="qq_wallet">QQ钱包</string>
    <string name="cash_payment">现金支付</string>
    <string name="cash_delivery">货到付款</string>
    <string name="member_payment">会员支付</string>
    <string name="distribution">配送</string>
    <string name="group_buying">团购</string>
    <string name="to_store">到店</string>
    <string name="shopping_mall">商城</string>
    <string name="take_out_food">外卖</string>
    <string name="preview">预览</string>
    <string name="goods">商品</string>
    <string name="sales_statistics">销售统计</string>
    <string name="coupon">优惠卷</string>
    <string name="str4">余额</string>
    <string name="str36">请输入备注内容！</string>
    <string name="str51">注：桌号或牌号</string>
    <string name="str52">打印小票</string>
    <string name="str53">不备注</string>
    <string name="str71">请输入商品备注</string>
    <string name="str72">输入商品备注：</string>
    <string name="str73">请输入订单备注</string>
    <string name="str74">输入订单备注：</string>
    <string name="str75">备注已空格分开（例:辣 不辣）</string>
    <string name="str76">详细地址</string>
    <string name="str79">手机号码</string>
    <string name="str86">时间</string>
    <string name="str175">序号</string>
    <string name="str180">会员名</string>
    <string name="str182">积分</string>
    <string name="str186">请输入手机号</string>
    <string name="str203">请输入您的姓名</string>
    <string name="str204">姓名</string>
    <string name="str242">例:xx路xx小区xx号楼xx室</string>
    <string name="str243">地区</string>
    <string name="str244">联系人</string>
    <string name="str329">开始时间</string>
    <string name="str330">请输入起始日期</string>
    <string name="str331">结束时间</string>
    <string name="str332">请输入结束日期</string>
    <string name="str333">重置</string>
    <string name="str417">近三天</string>
    <string name="str418">近七天</string>
    <string name="str419">本月</string>
    <string name="str420">上月</string>
    <string name="str421">上一天</string>
    <string name="str422">下一天</string>
    <string name="str423">上一月</string>
    <string name="str424">下一月</string>
</resources>