<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@id/toolbar_layout"
        layout="@layout/top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/str329"
            android:textColor="#adadad"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_start_date"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="#f5f5f5"
            android:gravity="center"
            android:hint="@string/str330"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_start_time"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="#f5f5f5"
            android:gravity="center"
            android:hint="@string/str86"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/str331"
            android:textColor="#adadad"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_end_date"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="#f5f5f5"
            android:gravity="center"
            android:hint="@string/str332"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_end_time"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="#f5f5f5"
            android:gravity="center"
            android:hint="@string/str86"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_nearly_three_days"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str417"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_nearly_seven_days"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str418"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_this_month"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str419"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_last_month"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str420"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_last_day"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str421"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_following_day"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str422"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_last_none_month"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str423"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_following_none_month"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_corner_whitle"
            android:text="@string/str424"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_corner_whitle"
                android:text="@string/str333"
                android:textColor="@color/grey_color"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_corner_whitle"
                android:text="@string/sure"
                android:textColor="@color/primary_color"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>