<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="1dp"
       android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str175"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_member_name"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str180"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_member_phone"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str79"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_member_integral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str182"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_member_balance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str4"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>