<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_adress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:fitsSystemWindows="true"
    tools:context="com.ui.ks.AddAdressActivity">
<LinearLayout
    android:id="@+id/layout_top"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
       <include layout="@layout/toolbar" android:id="@+id/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/str244"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:text="@string/str204"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:hint="@string/str203"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_phone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/str79"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_phone"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:hint="@string/str186"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/title_activity_address_detail"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_area"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_area_title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/str243"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toRightOf="@+id/tv_area_title"
            android:id="@+id/tv_area"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text=""
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/righit"
            android:layout_width="15dp"
            android:layout_height="15dp" />

    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_adress"
            android:layout_marginLeft="15dp"
            android:text="@string/str76"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/et_adress"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:singleLine="true"
            android:hint="@string/str242"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        android:textSize="14sp"
        android:text="@string/tv_save"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/btn_addadress"
        android:background="@drawable/btn_corner_orange"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="0dp" />

</RelativeLayout>
